fixed alignment of chatbox

--- a/client/index.css
+++ b/client/index.css
@@ -50,6 +50,7 @@ body {
   flex: 1;
   overflow-y: auto;
   padding: 10px;
+  width: 100%;
 }
 .msger-chat::-webkit-scrollbar {
   width: 6px;
@@ -64,6 +65,7 @@ body {
   display: flex;
   align-items: flex-end;
   margin-bottom: 10px;
+  width: 100%;
 }
 .msg:last-of-type {
   margin: 0;
@@ -79,10 +81,11 @@ body {
   border-radius: 50%;
 }
 .msg-bubble {
-  max-width: 450px;
+  max-width: 80%;
   padding: 15px;
   border-radius: 15px;
   background: var(--left-msg-bg);
+  overflow-wrap: anywhere;
 }
 .msg-info {
   display: flex;
@@ -165,4 +168,16 @@ body {
   background-color: green;
   border-radius: 50%;
   display: inline-block;
+}
+
+.container {
+  background-color: whitesmoke;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+
+.row {
+  width: 100%;
 }
